--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,24 @@
 version: '3.1'
 
 services:
-  api:
-    build: .
-    restart: always
-    container_name: feedback-api
-    ports:
-      - 8080:8080
-    working_dir: /opt/app
-    depends_on:
-      - db
+#  api:
+#    build: .
+#    restart: always
+#    container_name: feedback-api
+#    ports:
+#      - 8080:8080
+#    working_dir: /opt/app
+#    depends_on:
+#      - db
 
   db:
     build: './db/'
     container_name: feedback-db
     volumes:
       - /data/db:/data/db
+    environment:
+      MYSQL_DATABASE: krsnaa_feedback
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_HOST: '%'
     ports:
       - 3306:3306
