--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 ## MySQL
-spring.datasource.url=jdbc:mysql://feedback-db/krsnaa_feedback?useSSL=false
+spring.datasource.url=jdbc:mysql://${db:localhost}:3306/krsnaa_feedback?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-
-#`hibernate_sequence' doesn't exist
-spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
