--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 ## MySQL
-spring.datasource.url=jdbc:mysql://${db:localhost}:3306/krsnaa_feedback?useSSL=false
+spring.datasource.url=jdbc:mysql://database-1.can5gls3snes.us-east-1.rds.amazonaws.com:3306/krsnaa_feedback?useUnicode=true&characterEncoding=utf8&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/krsnaa_feedback?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=krsnaa1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
