--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,19 @@ spring.datasource.url=jdbc:mysql://database-1.can5gls3snes.us-east-1.rds.amazona
 #spring.datasource.url=jdbc:mysql://localhost:3306/krsnaa_feedback?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=krsnaa1234
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+multipart.maxFileSize=-1
+multipart.maxRequestSize=1024Mb
+
+cloud.aws.credentials.accessKey=AKIARUX22XDD4ZRYESXQ
+cloud.aws.credentials.secretKey=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
+cloud.aws.region={region}
+cloud.aws.s3.bucket=krsnaa-employee-bucket
