--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 multipart.maxFileSize=-1
 multipart.maxRequestSize=1024Mb
 
-cloud.aws.credentials.accessKey=%KI%RUX22X##YHL2$$HB
+cloud.aws.credentials.accessKey=%RU#YHL2C$
 cloud.aws.credentials.secretKey=2%l+Imck#92ksoFI1$iGz
 cloud.aws.region=us-east-1
 cloud.aws.s3.bucket=krsnaa-employee-bucket
