--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## MySQL
-spring.datasource.url=jdbc:mysql://database-1.can5gls3snes.us-east-1.rds.amazonaws.com:3306/krsnaa_feedback?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://database-1.c7vdt4iznxyn.ap-south-1.rds.amazonaws.com:3306/krsnaa_feedback?useUnicode=true&characterEncoding=utf8&useSSL=false
 #spring.datasource.url=jdbc:mysql://localhost:3306/krsnaa_feedback?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=krsnaa1234
+spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
