--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,14 +7,13 @@ on:
     branches: [ "master" ]
 
 jobs:
-
+  call-build-workflow:
+    uses: ./.github/workflows/maven-build.yml
   build:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: ./.github/workflows/maven-build.yml
-      
     - uses: actions/checkout@v3
     - name: Build the Docker image
     - run: docker build . --file Dockerfile --tag ranadekanak/feedback-api
