--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on: [push]
 
 jobs:
   build:
+    name: Build Maven Project
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 8
@@ -18,6 +18,7 @@ jobs:
   
   push_to_registry:
     name: Push Docker image to Docker Hub
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -40,5 +41,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{github.run_number}}
           labels: ${{ steps.meta.outputs.labels }}
