--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: echo "${{secrets.DOCKERHUB_PASSWORD}}" | docker login -u ${{secrets.DOCKERHUB_USERNAME}} --password-stdin
       
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag ranadekanak/feedback-api
+        run: docker build . --file Dockerfile --tag ranadekanak/feedback-api:${{github.run_number}}
         
       - name: Push Docker image
-        run: docker push ranadekanak/feedback-api
+        run: docker push ranadekanak/feedback-api:${{github.run_number}}
