--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,11 @@ jobs:
           distribution: 'temurin'
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
+      - name: Bump Version
+        id: bump
+        uses: nnichols/maven-version-bump-action@v3
+        with:
+          github-token: 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
   
   push_to_registry:
     name: Build & Push Docker image to Docker Hub
