--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
         uses: nnichols/maven-version-bump-action@v3
         with:
           github-token: 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
+      - name: Extract Maven project version
+        run: |
+            echo "RELEASE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
   
   push_to_registry:
     name: Build & Push Docker image to Docker Hub
@@ -33,7 +36,8 @@ jobs:
         run: echo "${{secrets.DOCKERHUB_PASSWORD}}" | docker login -u ${{secrets.DOCKERHUB_USERNAME}} --password-stdin
       
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag ranadekanak/feedback-api:${{github.run_number}}
+        run: docker build . --file Dockerfile --tag ranadekanak/feedback-api:${{ env.RELEASE_VERSION }}
         
       - name: Push Docker image
-        run: docker push ranadekanak/feedback-api:${{github.run_number}}
+        run: docker push ranadekanak/feedback-api:${{ env.RELEASE_VERSION }}
+ 
