#major use pom verson for docker image tag

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,6 @@ jobs:
         uses: nnichols/maven-version-bump-action@v3
         with:
           github-token: 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
-      - name: Extract Maven project version
-        run: |
-            echo "RELEASE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
   
   push_to_registry:
     name: Build & Push Docker image to Docker Hub
@@ -36,8 +33,8 @@ jobs:
         run: echo "${{secrets.DOCKERHUB_PASSWORD}}" | docker login -u ${{secrets.DOCKERHUB_USERNAME}} --password-stdin
       
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag ranadekanak/feedback-api:${{ env.RELEASE_VERSION }}
+        run: docker build . --file Dockerfile --tag ranadekanak/feedback-api:$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         
       - name: Push Docker image
-        run: docker push ranadekanak/feedback-api:${{ env.RELEASE_VERSION }}
+        run: docker push ranadekanak/feedback-api:$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
  
