--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     </dependencies>
 
     <build>
+        <finalName>feedback-api</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
