--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         run: echo "${{secrets.DOCKERHUB_PASSWORD}}" | docker login -u ${{secrets.DOCKERHUB_USERNAME}} --password-stdin
       
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag ranadekanak/feedback-api:$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        run: docker build . --tag ranadekanak/feedback-api:$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         
       - name: Push Docker image
         run: docker push ranadekanak/feedback-api:$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
