--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,28 +3,8 @@ name: Build Java & Build Docker Image
 on: [push]
 
 jobs:
-  build:
-    name: Build Maven Project
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Set up JDK 8
-        uses: actions/setup-java@v3
-        with:
-          java-version: '8'
-          distribution: 'temurin'
-      - name: Build with Maven
-        run: mvn clean install -DskipTests
-      - name: Bump Version
-        id: bump
-        uses: nnichols/maven-version-bump-action@v3
-        with:
-          github-token: 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
-  
-  push_to_registry:
+  build-docker-image:
     name: Build & Push Docker image to Docker Hub
-    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Log in to Docker Hub
