--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{secrets.DOCKERHUB_PASSWORD}}" | docker login -u ${{secrets.DOCKERHUB_USERNAME}} --password-stdin
       
+      - name: Check out the repo
+        uses: actions/checkout@v3
+        
       - name: Build Docker image
         run: docker build . --tag ranadekanak/feedback-api:$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
         
